# rusqlite_regex

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
regex/: .gitignore  CMakeLists.txt  entry.cpp
regex/extension/: meta.cpp  meta.h  regex.cpp  regex.h  utils.cpp  utils.h
rusqlite_regex_sys/: .gitignore  Cargo.toml
src/: cache.rs  error.rs  lib.rs
src/extension/: meta.rs  mod.rs  regex.rs
src/regex/: meta.rs  mod.rs  regex.rs
src/sqlite/: meta.rs  mod.rs  regex.rs
