[package]
name = "rusqlite_regex"
version = "0.1.0"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "A regex extension for rusqlite"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/rusqlite_regex"
documentation = "https://docs.rs/rusqlite_regex"
categories = ["database"]
keywords = ["database", "sqlite", "extension", "sqlite-extension", "regex"]

[dependencies]
rusqlite = { version = "~0.32", features = ["functions"] }
regex = "^1.10"

once_cell = "^1.19"

[dev-dependencies]
rusqlite = { version = "~0.32", features = ["bundled", "functions"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
